<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_heading_user" android:key="@string/pref_heading_user">

        <ListPreference
                android:key="@string/pref_key_username"
                android:title="@string/pref_title_username"
                android:summary="@string/pref_summary_username"
                android:entries="@array/entries_user"
                android:entryValues="@array/entryvalues_user"
                android:dialogTitle="@string/dialog_title_selectUser"
                android:defaultValue="@string/username_none" />
                
		<EditTextPreference
				android:key="@string/pref_key_newUser"
				android:title="@string/pref_title_createUser"
				android:summary="@string/pref_summary_createUser" />
		
		<PreferenceScreen
				android:key="@string/pref_key_userAdvanced"
				android:title="@string/pref_title_userAdvanced"
				android:summary="@string/pref_summary_userAdvanced" >
				
			<PreferenceScreen
                	android:title="@string/pref_title_removeUser"
                	android:summary="@string/pref_summary_removeUser"
                	android:dependency="@string/pref_key_username" >

            	<intent android:action="com.asparagusprograms.REMOVE_USER" />

        	</PreferenceScreen>
        	
        	<PreferenceScreen
        			android:key="@string/pref_key_clearSaves"
        			android:title="@string/pref_title_clearSaves"
        			android:summary="@string/pref_summary_clearSaves" />
				
			<CheckBoxPreference
                	android:key="@string/pref_key_noUserWarning"
                	android:title="@string/pref_title_noUserWarning"
                	android:summary="@string/pref_summary_noUserWarning" 
                	android:defaultValue="true" />
                	
		</PreferenceScreen>

    </PreferenceCategory>
    
    <PreferenceCategory
    		android:key="@string/pref_key_gameplay"
            android:title="@string/pref_heading_gameplay">
            
        <ListPreference android:entries="@array/entries_difficulty" android:entryValues="@array/entryvalues_difficulty" android:dialogTitle="@string/dialog_title_difficulty" android:title="@string/pref_title_difficulty" android:key="@string/pref_key_difficulty" android:summary="@string/pref_summary_difficulty" android:defaultValue="0"></ListPreference><com.asparagusprograms.kingsinthecorner.SeekBarPreference
        	android:summary="@string/pref_summary_computerDelay" android:max="3000" android:title="@string/pref_title_computerDelay" android:text=" milliseconds" android:key="@string/pref_key_computerDelay" android:dialogMessage="Set Delay" android:defaultValue="1000"/>
            
		<CheckBoxPreference
                android:key="@string/pref_key_autosave"
                android:title="@string/pref_title_autosave"
                android:summary="@string/pref_summary_autosave" />
                
    	<CheckBoxPreference
                android:key="@string/pref_key_sortHand"
                android:title="@string/pref_title_sortHand"
                android:summary="@string/pref_summary_sortHand"/>
                                
		<CheckBoxPreference
                android:key="@string/pref_key_emptyDeckWarning"
                android:title="@string/pref_title_emptyDeckWarning"
                android:summary="@string/pref_summary_emptyDeckWarning"
                android:defaultValue="true" />
                
		<PreferenceScreen
				android:key="@string/pref_key_cheatScreen"
				android:title="@string/pref_title_cheatScreen"
				android:summary="@string/pref_summary_cheatScreen" >
				
			<CheckBoxPreference
                	android:key="@string/pref_key_showComputerHand"
                	android:title="@string/pref_title_showComputerHand"
                	android:summary="@string/pref_summary_showComputerHand"
                	android:defaultValue="false" />
                	
       		<CheckBoxPreference
					android:key="@string/pref_key_cheatsEnabled"
					android:title="@string/pref_title_cheatsEnabled"
					android:summary="@string/pref_summary_cheatsEnabled" 
					android:defaultValue="false" />
                	
		</PreferenceScreen>

    
</PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_heading_display" android:key="@string/pref_heading_display">
            
		<ListPreference
                android:key="@string/pref_key_cardImage"
                android:title="@string/pref_title_cardImage"
                android:summary="@string/pref_summary_cardImage"
                android:entries="@array/entries_cardImages"
                android:entryValues="@array/entryvalues_cardImages"
                android:dialogTitle="@string/dialog_title_cardImages"
                android:defaultValue="@string/cardImage_default" />

        <CheckBoxPreference
                android:key="@string/pref_key_drawPileCount"
                android:title="@string/pref_title_drawPileCount"
                android:summary="@string/pref_summary_drawPileCount" />
                
		<CheckBoxPreference
                android:key="@string/pref_key_highlightCards"
                android:title="@string/pref_title_hightlightCards"
                android:summary="@string/pref_summary_highlightCards"
                android:defaultValue="true" />
                
    </PreferenceCategory>
    
 	<PreferenceCategory
    	android:title="@string/pref_heading_app" android:key="@string/pref_heading_app">

        <PreferenceScreen
        		android:key="@string/pref_key_update"
                android:title="@string/pref_title_update"
                android:summary="@string/app_version">
        </PreferenceScreen>

        <PreferenceScreen
                android:title="@string/pref_title_website"
                android:summary="@string/pref_summary_website">

            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/link_website" />

        </PreferenceScreen>

       			
       	<PreferenceScreen
       			android:key="@string/pref_key_email"
				android:title="@string/pref_title_email"
				android:summary="@string/pref_summary_email" />	

    </PreferenceCategory>

</PreferenceScreen>