<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true" android:background="@drawable/bg2">
<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Title" android:layout_gravity="center" android:layout_marginTop="20dip" android:background="@drawable/title_main"></ImageView><Button android:id="@+id/SinglePlayerButton" android:layout_marginTop="30dip" android:layout_gravity="center_horizontal" android:text="@string/button_singlePlayer" android:layout_width="120dip" android:textColor="#FFFFFF" android:layout_height="45dip" android:textStyle="bold" android:background="@xml/button_selector"></Button>
<Button android:id="@+id/MultiplayerButton" android:layout_marginTop="25dip" android:layout_gravity="center_horizontal" android:text="@string/button_multiplayer" android:layout_width="120dip" android:layout_height="45dip" android:textColor="#FFFFFF" android:textStyle="bold" android:background="@xml/button_selector"></Button><Button android:layout_marginTop="25dip" android:layout_gravity="center_horizontal" android:text="@string/button_stats" android:id="@+id/StatsButton" android:layout_width="120dip" android:layout_height="45dip" android:textColor="#FFFFFF" android:textStyle="bold" android:background="@xml/button_selector"></Button>







<Button android:id="@+id/SettingsButton" android:layout_gravity="center_horizontal" android:layout_marginTop="25dip" android:text="@string/button_prefs" android:layout_height="45dip" android:layout_width="120dip" android:textColor="#FFFFFF" android:textStyle="bold" android:background="@xml/button_selector"></Button>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout01" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical"><TextView android:layout_height="wrap_content" android:text="@string/copyright" android:layout_gravity="center" android:textColor="#FFFFFF" android:id="@+id/Copyright" android:layout_width="match_parent" android:gravity="center_horizontal"></TextView></LinearLayout></RelativeLayout>
