<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical" android:background="@drawable/bg_main"><ImageView android:layout_height="wrap_content" android:background="@drawable/title_selectplayers" android:layout_width="wrap_content" android:layout_marginLeft="20dip" android:layout_marginTop="60dip" android:id="@+id/Title"></ImageView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TwoPlayers" android:width="100dip" android:layout_marginTop="40dip" android:layout_gravity="center_horizontal" android:text="@string/button_2players"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="100dip" android:layout_gravity="center" android:id="@+id/ThreePlayers" android:layout_marginTop="40dip" android:text="@string/button_3players"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="100dip" android:layout_gravity="center" android:layout_marginTop="40dip" android:id="@+id/FourPlayers" android:text="@string/button_4players"></Button>
</LinearLayout>
